--- a/package.json
+++ b/package.json
@@ -41,13 +41,13 @@
       "path": "node_modules/cz-conventional-changelog"
     },
     "ghooks": {
-      "pre-commit": "npm run lint && npm run cover"
     }
   },
   "dependencies": {
     "json-stringify-safe": "5.0.1",
     "lodash": "4.16.6",
-    "safe-access": "0.1.0"
+    "safe-access": "0.1.0",
+    "mobx": "^2.5.0 || ^3.0.0"
   },
   "peerDependencies": {
     "mobx": "^2.5.0 || ^3.0.0"
